--- a/.gitignore
+++ b/.gitignore
@@ -56,6 +56,10 @@ typings/
 
 # dotenv environment variables file
 .env
+/api/.env.development
+/api/.env.production
+/frontend/.env.development
+/frontend/.env.production
 
 # next.js build output
 .next
